--- a/1.자료형.md
+++ b/1.자료형.md
@@ -39,8 +39,377 @@
   1
   ```
 ## 문자열
+문자열 : 문자, 단어 등으로 구성된 문자들의 집합
+문자열 자료형은 그 **요소값을 변경할 수 없다**. 그래서 immutable한 자료형이라고도 부른다.
+### 생성 방법
+* 큰따옴표(")로 양쪽 둘러싸기 : "Hello World"
+* 작은따옴표(')로 양쪽 둘러싸기 : 'Hello World'
+* 큰따옴표 3개를 연속으로 써서 양쪽 둘러싸기 : """Hello World"""
+* 작은따옴표 3개를 연속으로 써서 양쪽 둘러싸기 : '''Hello World'''
+* 여러 줄인 문자열을 변수에 대입
+  - 이스케이프 코드 \n 삽입
+  ```
+  >>> multiline = "Life is too short\nYou need python"
+  ```
+  - 연속된 작은따옴표 3개(''') 또는 큰따옴표 3개(""") 사용
+  ```
+  >>> multiline='''
+  ... Life is too short
+  ... You need python
+  ... '''
+  >>> multiline="""
+  ... Life is too short
+  ... You need python
+  ... """
+  ```
+이스케이프 코드
+* 이스케이프 코드란 프로그래밍할 때 사용할 수 있도록 미리 정의해 둔 "문자 조합"이다.
+* 주로 출력물을 보기 좋게 정렬하는 용도로 사용한다.
+* 몇 가지 이스케이프 코드를 정리하면 다음과 같다.
+
+|코드|설명|코드|설명|
+|------|---|---|---|
+|\n|문자열 안에서 줄을 바꿀 때 사용|\r|캐리지 리턴(줄 바꿈 문자, 현재 커서를 가장 앞으로 이동)|
+|\t|문자열 사이에 탭 간격을 줄 때 사용|\f|폼 피드(줄 바꿈 문자, 현재 커서를 다음 줄로 이동)|
+|```\\\```|문자 \를 그대로 표현할 때 사용|\a|벨 소리(출력할 때 PC 스피커에서 '삑' 소리가 난다)|
+|\'|작은따옴표(')를 그대로 표현할 때 사용|\b|백 스페이스|
+|\"|큰따옴표(")를 그대로 표현할 때 사용|\000|널 문자|
+
+### 연산
+* 더하기
+```
+>>> "Python" + " is fun!"
+'Python is fun!'
+```
+* 곱하기
+```
+>>> "python" * 2
+'pythonpython'
+```
+* 길이 : len()
+```
+>>> len("python")
+6
+```
+### Indexing, Slicing
+Indexing
+* 파이썬은 0부터 숫자를 세며, 이 숫자를 통해 특정 위치의 문자를 가리킬 수 있다.
+```
+>>> a = "Hello"
+>>> a[1]
+'e'
+```
+* 또한 문자열을 뒤에서부터 읽기 위해 마이너스(-) 기호를 붙일 수 있다.
+```
+>>> a[-1]
+'o'
+```
+Slicing
+* 주어진 문자열에서 특정 단어를 뽑아내는 것이다.
+* a[시작 번호:끝 번호]를 지정할 때 **끝 번호에 해당하는 것은 포함하지 않는다**.
+```
+>>> a = "Life is too short, You need Python"
+>>> a[0:4]
+'Life'
+```
+* 끝 번호 부분을 생략하면 시작 번호부터 그 문자열의 끝까지 뽑아낸다.
+* 시작 번호, 끝 번호를 생략하면 문자열의 처음부터 끝까지 뽑아낸다.
+* 마이너스(-) 기호를 사용할 수 있다.
+```
+>>> a[19:-7] # a[19:-7]이 뜻하는 것은 a[19]에서부터 a[-8]까지를 말한다.
+'You need'
+```
+Fomatting
+문자열 안의 특정한 값만을 바꿔야할 때 이를 가능하게 해주는 것이 문자열 포매팅이다.
+* 숫자 대입
+  - 바로 대입
+  ```
+  >>> "I eat %d apples." % 3
+  'I eat 3 apples.'
+  ```
+  - 변수로 대입
+  ```
+  >>> number = 3
+  >>> "I eat %d apples." % number
+  'I eat 3 apples.'
+  ```
+* 문자열 대입
+  ```
+  "I eat %s apples." % "five"
+  'I eat five apples.'
+  ```
+* 2개 이상의 값 넣기
+  마지막 % 다음 괄호 안에 콤마(,)로 구분
+  ```
+  >>> number = 10
+  >>> day = "three"
+  >>> "I ate %d apples. so I was sick for %s days." % (number, day)
+  'I ate 10 apples. so I was sick for three days.'
+  ```
+문자열 포맷 코드 표
+|코드|설명|
+|---|---|
+|%s|문자열(String)|
+|%c|문자 1개(character)|
+|%d|정수(Integer)|
+|%f|부동소수(floating-point)|
+|%o|8진수|
+|%x|16진수|
+|%%|Literal % (문자 % 자체)|
+관련 함수
+* count : 문자 개수 세기
+* find, index : 위치 알려 주기
+* join : 문자열 삽입
+* upper / lower : 대문자 ↔ 소문자 변환
+* lstrip / rstrip / strip : 왼쪽 / 오른쪽 / 양쪽 공백 지우기
+* replace : 문자열 바꾸기
+* split : 문자열 나누기
 ## List
+### 생성 방법
+리스트를 만들 때는 위에서 보는 것과 같이 대괄호([ ])로 감싸 주고 각 요솟값은 쉼표(,)로 구분해 준다.
+```리스트명 = [요소1, 요소2, 요소3, ...]```
+리스트 안에는 어떠한 자료형도 포함시킬 수 있다.
+* 빈 리스트
+```
+>>> a = []
+>>> b = list()
+```
+* 숫자를 요소값으로 가짐
+```>>> a = [1, 2, 3]```
+* 문자열을 요소값으로 가짐
+```>>>a = ['Life', 'is', 'too', 'short']```
+* 숫자와 문자열을 함께 요소값으로 가짐
+```>>>a = [1, 2, 'Life', 'is']```
+* 리스트 자체를 요소값으로 가짐
+```>>> a = [1, 2, ['Life', 'is']]```
+### Indexing, Slicing
+* Indexing
+  - 리스트 역시 문자열처럼 인덱싱을 적용할 수 있다.
+  - 리스트 a의 첫 번째 요소가 아니라 a[0]이 리스트 a의 첫 번째 요소임을 명심하자.
+  - a[-1]은 문자열에서와 마찬가지로 리스트 a의 마지막 요솟값을 말한다.
+```
+>>> a = [1, 2, 3]
+>>> a[0]
+1
+```
+* Slicing
+  - 리스트에서도 슬라이싱 기법을 적용할 수 있다.
+```
+>>> a = [1, 2, 3, 4, 5]
+>>> a[0:2]
+[1, 2]
+```
+### 연산
+* 더하기
+```
+>>> [1, 2, 3] + [4, 5, 6]
+[1, 2, 3, 4, 5, 6]
+```
+* 반복하기
+```
+>>> [1, 2, 3] * 3
+[1, 2, 3, 1, 2, 3, 1, 2, 3]
+```
+* 길이 :len()
+```
+>>> len([1, 2, 3])
+3
+```
+### 값 수정과 삭제
+* 값 수정
+```
+>>> a = [1, 2, 3]
+>>> a[2] = 4
+>>> a
+```
+* 값 삭제 : del 함수는 파이썬이 자체적으로 가지고 있는 삭제 함수
+```
+>>> a = [1, 2, 3]
+>>> del a[1]
+>>> a
+[1, 3]
+```
+### 관련 함수
+* append : 리스트에 요소 추가
+* sort : 리스트 정렬(문자, 알파벳 순서)
+* reverse : 리스트를 역순으로 뒤집기
+* index : 위치 반환
+* insert : 요소 삽입
+* remove : (리스트에서 첫 번째로 나오는 값에 대한)요소 제거
+* pop : 맨 마지막 요소를 돌려주고 그 요소는 삭제
+* count : 리스트 개수 세기
+* extend : 확장. 원래 리스트에 다른 리스트를 뒤에 더한다.
 ## Tuple
+### 생성 방법
+튜플(tuple)은 몇 가지 점을 제외하곤 리스트와 거의 비슷하며 리스트와 다른 점은 다음과 같다.
+* 리스트는 [ ]으로 둘러싸지만 튜플은 ( )으로 둘러싼다.
+* 리스트는 그 값의 생성, 삭제, 수정이 가능하지만 튜플은 그 값을 바꿀 수 없다.
+
+따라서 둘을 구별해서 사용하는 것이 유리하다.(값 변화 가능 : list, 값 변화 불가능 : tuple)
+```
+>>> t1 = ()
+>>> t2 = (1,)
+>>> t3 = (1, 2, 3)
+>>> t4 = 1, 2, 3
+>>> t5 = ('a', 'b', ('ab', 'cd'))
+```
+### 연산
+* 더하기
+```
+>>> (1, 2, 'a', 'b') + (3, 4)
+(1, 2, 'a', 'b', 3, 4)
+```
+* 곱하기
+```
+>>> (1, 2, 'a', 'b') * 2
+(1, 2, 'a', 'b', 1, 2, 'a', 'b')
+```
+* 길이 : len()
+```
+>>> len((1, 2, 'a', 'b'))
+4
+```
+### Indexing, Slicing
+* Indexing
+```
+>>> t1 = (1, 2, 'a', 'b')
+>>> t1[0]
+1
+>>> t1[3]
+'b'
+```
+* Slicing
+```
+>>> t1 = (1, 2, 'a', 'b')
+>>> t1[1:]
+(2, 'a', 'b')
+```
 ## Dictionary
+딕셔너리는 Key와 Value를 한 쌍으로 갖는 자료형이다.
+예컨대 Key가 "baseball"이라면 Value는 "야구"가 될 것이다.
+
+딕셔너리는 리스트나 튜플처럼 순차적으로(sequential) 해당 요솟값을 구하지 않고 Key를 통해 Value를 얻는다.이것이 바로 딕셔너리의 가장 큰 특징이다.
+baseball이라는 단어의 뜻을 찾기 위해 사전의 내용을 순차적으로 모두 검색하는 것이 아니라 baseball이라는 단어가 있는 곳만 펼쳐 보는 것이다.
+### 생성 방법
+```{Key1:Value1, Key2:Value2, Key3:Value3, ...}```
+* Key와 Value의 쌍 여러 개가 { }로 둘러싸여 있다.
+* 각각의 요소는 Key : Value 형태로 이루어져 있고 쉼표(,)로 구분되어 있다.
+* **Key에는 변하지 않는 값을 사용하고, Value에는 변하는 값과 변하지 않는 값 모두 사용할 수 있다.**
+* 요소 추가 : dic[key] = value 이렇게 추가할 수 있다.
+```
+>>> a = {1: 'a'}
+>>> a[2] = 'b'
+>>> a
+{1: 'a', 2: 'b'}
+```
+* 요소 삭제 : del 함수를 사용해서 del a[key]처럼 입력하면 지정한 Key에 해당하는 {key : value} 쌍이 삭제된다.
+```
+>>> del a[1]
+>>> a
+{2: 'b'}
+```
+* key 사용해 value 얻기 : 딕셔너리변수이름[Key]를 사용
+* 주의 사항
+  - 딕셔너리에서 Key는 고유한 값이므로 중복되는 Key 값을 설정해 놓으면 하나를 제외한 나머지 것들이 모두 무시된다는 점을 주의해야 한다.
+  ```
+  >>> a = {1:'a', 1:'b'}
+  >>> a
+  {1: 'b'}
+  ```
+  - Key에 리스트(변경 가능)는 쓸 수 없다는 것이다. 하지만 튜플(변경 불가능)은 Key로 쓸 수 있다.
+### 함수
+* keys : key 리스트 만들기
+  - 딕셔너리의 Key만을 모아서 dict_keys 객체를 돌려준다.
+  - dict_key객체는 리스트와 같지만, append, insert, pop, remove, sort 함수는 수행할 수 없다.
+```
+>>> {'name': 'pey', 'phone': '0119993323', 'birth': '1118'}.keys()
+dict_keys(['name', 'phone', 'birth'])
+```
+* values : value 리스트 만들기
+```
+>>> {'name': 'pey', 'phone': '0119993323', 'birth': '1118'}.keys()
+dict_values(['pey', '0119993323', '1118'])
+```
+* items : key, value 얻기
+  - Key와 Value의 쌍을 튜플로 묶은 값을 dict_items 객체로 돌려준다.
+* clear : key, value 쌍 모두 지우기
+* get : key로 value 얻기
+* in : 해당 key가 딕셔너리 안에 있는지 조사하기
+```
+>>> 'name' in {'name':'pey', 'phone':'0119993323', 'birth': '1118'}
+True
+```
 ## Set
+### 생성 방법
+set 키워드를 사용해 만들 수 있다.
+* 리스트
+```
+>>> s1 = set([1,2,3])
+>>> s1
+{1, 2, 3}
+```
+* 문자열
+```
+>>> s2 = set("Hello")
+>>> s2
+{'e', 'H', 'l', 'o'}
+```
+### 특징
+* 중복을 허용하지 않는다.
+* 순서가 없다(Unordered).
+  - set 자료형은 순서가 없기(unordered) 때문에 인덱싱으로 값을 얻을 수 없다.
+  - 만약 set 자료형에 저장된 값을 인덱싱으로 접근하려면 리스트나 튜플로 변환한 후 해야 한다.
+* 중복을 허용하지 않는 set의 특징은 **자료형의 중복을 제거하기 위한 필터 역할**로 종종 사용하기도 한다.
+### 교집합, 합집합, 차집합 구하기
+* 교집합 : & 또는 intersection 함수를 사용.
+```
+>>> s1 = set([1, 2, 3, 4, 5, 6])
+>>> s2 = set([4, 5, 6, 7, 8, 9])
+>>> s1 & s2
+{4, 5, 6}
+>>> s1.intersection(s2)
+{4, 5, 6}
+```
+* 합집합 : | 또는 union 함수를 사용. 중복해서 포함된 값은 한 개씩만 표현된다.
+```
+>>> s1 | s2
+{1, 2, 3, 4, 5, 6, 7, 8, 9}
+>>> s1.union(s2)
+{1, 2, 3, 4, 5, 6, 7, 8, 9}
+```
+* 차집합 : - 또는 difference 함수를 사용.
+```
+>>> s1 - s2
+{1, 2, 3}
+>>> s1.difference(s2)
+{1, 2, 3}
+```
+### 함수
+* add : 값 1개 추가하기
+* update : 값 여러개 추가하기
+* remove : 특정 값 제거하기
 ## Bool
+* 참(True)과 거짓(False)을 나타내는 자료형이다.
+* True나 False는 파이썬의 예약어로 true, false와 같이 사용하지 말고 **첫 문자를 항상 대문자로 사용**해야 한다.
+* 불 자료형은 조건문의 반환 값으로도 사용된다.
+```>>> 1 == 1```
+### 자료형의 참과 거짓
+|값|참 or 거짓|
+|---|---|
+|"python"|참|
+|""|거짓|
+|[1, 2, 3]|참|
+|[]|거짓|
+|()|거짓|
+{}||거짓|
+|1|참|
+|0|거짓|
+|None|거짓|
+### 불 연산
+bool 내장 함수를 사용하면 자료형의 참과 거짓을 식별할 수 있다.
+```
+>>> bool([1,2,3])
+True
+>>> bool([])
+False
+```
