--- a/JS_BASIC/2.6_alert,prompt,confirm.md
+++ b/JS_BASIC/2.6_alert,prompt,confirm.md
@@ -4,7 +4,7 @@
 * 모달 : 페이지의 나머지 부분과 상호 작용이 불가능
 * 모달 창 : 사용자는 모달 창 바깥에 있는 버튼을 누른다든가 하는 행동을 할 수 없습니다.
 
-## alert
+## alert(경고창)
 사용자가 ‘확인(OK)’ 버튼을 누를 때까지 메시지를 보여주는 모달 창을 보여줍니다.
 ```js no-beautify
 // 입력 값
@@ -16,7 +16,7 @@ alert(message);
 alert("Hello");
 ```
 
-## prompt
+## prompt(입력창)
 텍스트 메시지와 입력 필드(input field), 확인(OK) 및 취소(Cancel) 버튼이 있는 모달 창을 보여줍니다.
 IE의 경우, default값이 없으면 "undefined"를 입력 필드에 명시하기 때문에 default값을 항상 명시하기를 권장합니다.
 ```js no-beautify
@@ -33,7 +33,7 @@ result = prompt("값 입력", "여기에 값을 입력하세요.");
 alert(`선택한 값 : ${result}`);
 ```
 
-## confirm
+## confirm(선택창)
 매개변수로 받은 question(질문)과 확인 및 취소 버튼이 있는 모달 창을 보여줍니다.
 사용자가 확인버튼를 누르면 true, 그 외의 경우는 false를 반환합니다.
 ```js no-beautify
